@@ -20,10 +20,14 @@ module God
         concensus = (@timeline.size == self.times)
         duration = self.within.nil? || (@timeline.last - @timeline.first) < self.within
         
+        history = "[" + @timeline.map { |x| "#{x}" }.join(", ") + "]"
+        
         if concensus && duration
           @timeline.clear if within.nil?
+          self.info = "tries exceeded #{history}"
           return true
         else
+          self.info = "tries within bounds #{history}"
           return false
         end
       end
