@@ -6,6 +6,7 @@
   * Implement notification system
   * Add Tasks (a generalization of Watches) to do non-process related tasks
   * Add example init.d file in GOD_INSTALL_DIR/init/god
+  * Add human readable info to conditions (and make low level log lines debug)
 * Minor Enchancements
   * Allow EventConditions to do transition overloading
   * Report errors during god startup instead of failing silently
@@ -17,6 +18,7 @@
   * Add `god quit` to stop god without stopping any tasks
 * New Conditions
   * Flapping < TriggerCondition - trigger on state change
+  * HttpResponseCode < PollCondition - trigger on http response code or timeout (thx scott becker)
 * New Contacts
   * Email < Contact - notify via email (smtp, sendmail)
 * Bug Fixes
